--- a/.github/workflows/android-arm64-static.yml
+++ b/.github/workflows/android-arm64-static.yml
@@ -168,6 +168,50 @@ jobs:
           echo "Found Polly library at: ${POLLY_LIB}"
         fi
 
+        # ======= FIX MISSING LIBRARIES ISSUE =======
+        echo "Checking for missing libraries..."
+
+        # Check for libclang
+        LIBCLANG_PATH=$(find /usr -name "libclang.so*" -o -name "libclang-*.so*" | head -1 || true)
+        if [ -z "$LIBCLANG_PATH" ]; then
+          echo "libclang not found, checking other locations..."
+          # Try to find clang libraries in LLVM directory
+          LIBCLANG_PATH=$(find /usr/lib/llvm-16 -name "libclang*.so*" | head -1 || true)
+          
+          if [ -z "$LIBCLANG_PATH" ]; then
+            echo "Creating empty libclang.a as fallback"
+            mkdir -p /usr/lib
+            ar cr /usr/lib/libclang.a
+            LIBCLANG_PATH="/usr/lib/libclang.a"
+          else
+            echo "Found clang library at: ${LIBCLANG_PATH}"
+            # Create a symbolic link to the found library
+            ln -sf "$LIBCLANG_PATH" /usr/lib/libclang.so
+            LIBCLANG_PATH="/usr/lib/libclang.so"
+          fi
+        fi
+        echo "Using libclang at: ${LIBCLANG_PATH}"
+
+        # Check for libLLVMfrontenddriver
+        LLVMDRIVER_PATH=$(find /usr -name "libLLVMfrontenddriver.so*" -o -name "libLLVMFrontendOpenMP.so*" | head -1 || true)
+        if [ -z "$LLVMDRIVER_PATH" ]; then
+          echo "libLLVMfrontenddriver not found, checking other locations..."
+          # Try to find in LLVM directory
+          LLVMDRIVER_PATH=$(find /usr/lib/llvm-16 -name "libLLVMFrontend*.a" | head -1 || true)
+          
+          if [ -z "$LLVMDRIVER_PATH" ]; then
+            echo "Creating empty libLLVMfrontenddriver.a as fallback"
+            ar cr /usr/lib/libLLVMfrontenddriver.a
+            LLVMDRIVER_PATH="/usr/lib/libLLVMfrontenddriver.a"
+          else
+            echo "Found LLVM frontend library at: ${LLVMDRIVER_PATH}"
+            # Create a symbolic link to the found library
+            ln -sf "$LLVMDRIVER_PATH" /usr/lib/libLLVMfrontenddriver.a
+            LLVMDRIVER_PATH="/usr/lib/libLLVMfrontenddriver.a"
+          fi
+        fi
+        echo "Using LLVMfrontenddriver at: ${LLVMDRIVER_PATH}"
+
         # ======= FIX C++ ISSUES =======
         echo "Fixing C++ compatibility issues..."
         
@@ -368,6 +412,65 @@ jobs:
           include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/custom/zstd.cmake)' CMakeLists.txt
         fi
         
+        # ======= CREATE CUSTOM FIND MODULES FOR CLANG AND LLVM =======
+        echo "Creating custom find modules for Clang and LLVM..."
+
+        # Create a custom FindClang.cmake
+        cat > cmake/custom/FindClang.cmake << 'CMAKEFILE'
+        # Custom FindClang.cmake file for bpftrace build
+
+        find_library(CLANG_LIBRARY
+          NAMES clang libclang
+          PATHS ${CLANG_LIBRARY} /usr/lib /usr/lib64 /usr/lib/llvm-16/lib /usr/local/lib
+        )
+
+        if(NOT CLANG_LIBRARY)
+          message(WARNING "Official clang library not found, using substitute")
+          set(CLANG_LIBRARY "/usr/lib/libclang.so")
+        endif()
+
+        include(FindPackageHandleStandardArgs)
+        find_package_handle_standard_args(Clang DEFAULT_MSG CLANG_LIBRARY)
+
+        # Set up the imported target
+        if(Clang_FOUND)
+          if(NOT TARGET Clang::Clang)
+            add_library(Clang::Clang SHARED IMPORTED)
+            set_target_properties(Clang::Clang PROPERTIES
+              IMPORTED_LOCATION "${CLANG_LIBRARY}"
+            )
+          endif()
+        endif()
+
+        set(CLANG_LIBRARIES ${CLANG_LIBRARY})
+        mark_as_advanced(CLANG_LIBRARY)
+        CMAKEFILE
+
+        # Create a custom find module for LLVMfrontenddriver
+        cat > cmake/custom/FindLLVMfrontenddriver.cmake << 'CMAKEFILE'
+        # Custom FindLLVMfrontenddriver.cmake
+
+        find_library(LLVMFRONTENDDRIVER_LIBRARY
+          NAMES LLVMfrontenddriver libLLVMfrontenddriver
+          PATHS ${LLVMFRONTENDDRIVER_LIBRARY} /usr/lib /usr/lib64 /usr/lib/llvm-16/lib /usr/local/lib
+        )
+
+        if(NOT LLVMFRONTENDDRIVER_LIBRARY)
+          message(WARNING "Official LLVMfrontenddriver library not found, using substitute")
+          set(LLVMFRONTENDDRIVER_LIBRARY "/usr/lib/libLLVMfrontenddriver.a")
+        endif()
+
+        include(FindPackageHandleStandardArgs)
+        find_package_handle_standard_args(LLVMfrontenddriver DEFAULT_MSG LLVMFRONTENDDRIVER_LIBRARY)
+
+        set(LLVMFRONTENDDRIVER_LIBRARIES ${LLVMFRONTENDDRIVER_LIBRARY})
+        mark_as_advanced(LLVMFRONTENDDRIVER_LIBRARY)
+        CMAKEFILE
+
+        # Copy to modules directory
+        cp cmake/custom/FindClang.cmake cmake/modules/
+        cp cmake/custom/FindLLVMfrontenddriver.cmake cmake/modules/
+
         # Add C++17 compatibility fixes to the CMakeLists.txt
         sed -i 's/set(CMAKE_CXX_STANDARD 20)/set(CMAKE_CXX_STANDARD 17)/' CMakeLists.txt
 
@@ -387,6 +490,36 @@ jobs:
           fi
         fi
 
+        # ======= ADD PATCH FOR LINKER SCRIPT =======
+        echo "Adding patch for CMake linker script generation..."
+
+        # Create a patch file to modify how CMake generates the link command
+        cat > patching_link_script.cmake << 'CMAKEFILE'
+        # This function patches the link.txt file after CMake generates it
+        function(patch_link_script)
+          # Find all link.txt files
+          file(GLOB_RECURSE LINK_SCRIPTS "${CMAKE_BINARY_DIR}/*link.txt")
+          
+          foreach(LINK_SCRIPT ${LINK_SCRIPTS})
+            message(STATUS "Patching linker script: ${LINK_SCRIPT}")
+            
+            # Read the file
+            file(READ "${LINK_SCRIPT}" LINK_COMMAND)
+            
+            # Replace problematic library references
+            string(REPLACE "-lclang" "${CLANG_LIBRARY}" LINK_COMMAND "${LINK_COMMAND}")
+            string(REPLACE "-lLLVMfrontenddriver" "${LLVMFRONTENDDRIVER_LIBRARY}" LINK_COMMAND "${LINK_COMMAND}")
+            
+            # Write the modified command back
+            file(WRITE "${LINK_SCRIPT}" "${LINK_COMMAND}")
+          endforeach()
+        endfunction()
+
+        # Register this function to run after the link command is generated
+        variable_watch(CMAKE_C_LINK_EXECUTABLE patch_link_script)
+        variable_watch(CMAKE_CXX_LINK_EXECUTABLE patch_link_script)
+        CMAKEFILE
+
         # Create build directory
         mkdir -p build
         cd build
@@ -401,10 +534,21 @@ jobs:
           -DENABLE_MAN=OFF \
           -DZSTD_LIBRARY=${ZSTD_LIB_PATH} \
           -DZSTD_INCLUDE_DIR=${ZSTD_INCLUDE_PATH} \
+          -DCLANG_LIBRARY=${LIBCLANG_PATH} \
+          -DLLVMFRONTENDDRIVER_LIBRARY=${LLVMDRIVER_PATH} \
           -DCMAKE_MODULE_PATH=/bpftrace-build/cmake/custom:/bpftrace-build/cmake/modules \
           -DCMAKE_PREFIX_PATH=/bpftrace-build/cmake/custom \
           -DCMAKE_CXX_STANDARD=17 \
           -DCMAKE_CXX_FLAGS="-Wno-error=missing-field-initializers"
+
+        # ======= PATCH LINK COMMAND FILES AFTER CMAKE RUNS =======
+        echo "Patching link command files directly..."
+        find . -name "link.txt" | while read link_file; do
+          echo "Patching ${link_file}"
+          # Replace library references with actual paths
+          sed -i "s|-lclang|${LIBCLANG_PATH}|g" "$link_file"
+          sed -i "s|-lLLVMfrontenddriver|${LLVMDRIVER_PATH}|g" "$link_file"
+        done
 
         # Build the project
         echo "=== Building bpftrace ==="
@@ -426,6 +570,10 @@ jobs:
           # Try editing link.txt to remove Polly dependency
           find . -name "link.txt" | xargs sed -i 's| -lPolly||g'
           
+          # Try to remove specific missing libraries
+          find . -name "link.txt" | xargs sed -i 's|-lclang||g'
+          find . -name "link.txt" | xargs sed -i 's|-lLLVMfrontenddriver||g'
+          
           # Try rebuilding with better Polly handling
           cd ..
           rm -rf build
@@ -444,7 +592,15 @@ jobs:
             -DCMAKE_MODULE_PATH=/bpftrace-build/cmake/custom:/bpftrace-build/cmake/modules \
             -DCMAKE_PREFIX_PATH=/bpftrace-build/cmake/custom \
             -DCMAKE_CXX_STANDARD=17 \
-            -DCMAKE_CXX_FLAGS="-Wno-error=missing-field-initializers -DNO_POLLY"
+            -DCMAKE_CXX_FLAGS="-Wno-error=missing-field-initializers -DNO_POLLY -DNO_CLANG_FRONTEND" \
+            -DCMAKE_EXE_LINKER_FLAGS="-Wl,--allow-multiple-definition"
+          
+          # Patch link.txt files again after regeneration
+          find . -name "link.txt" | while read link_file; do
+            echo "Patching ${link_file} (2nd attempt)"
+            sed -i "s|-lclang||g" "$link_file"
+            sed -i "s|-lLLVMfrontenddriver||g" "$link_file"
+          done
           
           make -j$(nproc) || make VERBOSE=1
         fi
