--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -1,12 +1,18 @@
 # Dockerfile for building static bpftrace with musl libc
 FROM alpine:3.19
 
+# Add edge testing repository for some packages
+RUN echo "https://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories
+
 RUN apk add --update \
   asciidoctor \
   argp-standalone \
   bash \
   binutils-dev \
   bison \
+  bpftrace \
+  bcc-dev \
+  bcc-static \
   bzip2-dev \
   bzip2-static \
   build-base \
@@ -55,6 +61,25 @@ RUN ln -s 'clang17' /usr/lib/cmake/clang
 # Some versions of Alpine may need this symlink
 RUN if [ ! -e /lib/ld-musl-x86_64.so.1 ] && [ -e /lib/libc.musl-x86_64.so.1 ]; then \
     ln -s /lib/libc.musl-x86_64.so.1 /lib/ld-musl-x86_64.so.1; \
+fi
+
+# If bcc-dev doesn't provide all needed files, compile from source
+RUN if [ ! -f "/usr/include/bcc/bcc_version.h" ]; then \
+    apk add --no-cache cmake git python3 llvm17-dev clang17-dev flex-dev bison \
+                       build-base linux-headers elfutils-dev python3-dev && \
+    git clone https://github.com/iovisor/bcc.git /tmp/bcc && \
+    cd /tmp/bcc && \
+    git checkout v0.28.0 && \
+    mkdir build && \
+    cd build && \
+    cmake -DCMAKE_INSTALL_PREFIX=/usr \
+          -DENABLE_LLVM_SHARED=0 \
+          -DCMAKE_C_COMPILER=/usr/bin/clang \
+          -DCMAKE_CXX_COMPILER=/usr/bin/clang++ \
+          .. && \
+    make -j$(nproc) && \
+    make install && \
+    cd / && rm -rf /tmp/bcc; \
 fi
 
 # Create a build script that will be executed in the container
