--- a/.github/workflows/scripts/Dockerfile.alpine
+++ b/.github/workflows/scripts/Dockerfile.alpine
@@ -73,10 +73,12 @@ RUN mkdir -p /tmp/empty && cd /tmp/empty && \
     echo "void __llvm_stub() {}" > stub.c && \
     gcc -c stub.c -o stub.o && \
     mkdir -p /usr/lib/llvm17/lib && \
-    for lib in libLLVMTestingAnnotations.a libLLVMTestingSupport.a libLLVMFrontendOpenMP.a libLLVMFrontenddriver.a libLLVMFrontendOffloading.a libLLVMOrcJIT.a libllvm_gtest.a libllvm_gtest_main.a libclangdRemoteIndex.a libclangDaemon.a libclangDaemonTweaks.a libclangdMain.a; do \
+    for lib in libLLVMTestingAnnotations.a libLLVMTestingSupport.a libLLVMFrontendOpenMP.a libLLVMFrontenddriver.a libLLVMfrontenddriver.a libLLVMFrontendOffloading.a libLLVMOrcJIT.a libllvm_gtest.a libllvm_gtest_main.a libclangdRemoteIndex.a libclangDaemon.a libclangDaemonTweaks.a libclangdMain.a; do \
         echo "Creating stub for $lib"; \
         ar rcs /usr/lib/llvm17/lib/$lib stub.o; \
     done && \
+    # 创建大小写变体的符号链接 (特别针对frontend/Frontend问题)
+    ln -sf /usr/lib/llvm17/lib/libLLVMFrontenddriver.a /usr/lib/llvm17/lib/libLLVMfrontenddriver.a && \
     # Additional stubs for libclang libraries
     for lib in libclangBasic.a libclangAPINotes.a libclangLex.a libclangParse.a libclangAST.a libclangDynamicASTMatchers.a libclangASTMatchers.a libclangCrossTU.a libclangSema.a libclangCodeGen.a libclangAnalysis.a libclangAnalysisFlowSensitive.a libclangAnalysisFlowSensitiveModels.a; do \
         echo "Creating stub for $lib"; \
@@ -116,6 +118,11 @@ RUN mkdir -p /usr/lib/llvm17/lib/cmake/llvm && \
     echo "if (NOT TARGET llvm_gtest_main AND EXISTS \"/usr/lib/llvm17/lib/libllvm_gtest_main.a\")" >> /usr/lib/llvm17/lib/cmake/llvm/LLVMTestPatch.cmake && \
     echo "  add_library(llvm_gtest_main STATIC IMPORTED)" >> /usr/lib/llvm17/lib/cmake/llvm/LLVMTestPatch.cmake && \
     echo "  set_target_properties(llvm_gtest_main PROPERTIES IMPORTED_LOCATION \"/usr/lib/llvm17/lib/libllvm_gtest_main.a\")" >> /usr/lib/llvm17/lib/cmake/llvm/LLVMTestPatch.cmake && \
+    echo "endif()" >> /usr/lib/llvm17/lib/cmake/llvm/LLVMTestPatch.cmake && \
+    # 添加小写版本的frontend driver库定义
+    echo "if (NOT TARGET LLVMfrontenddriver AND EXISTS \"/usr/lib/llvm17/lib/libLLVMfrontenddriver.a\")" >> /usr/lib/llvm17/lib/cmake/llvm/LLVMTestPatch.cmake && \
+    echo "  add_library(LLVMfrontenddriver STATIC IMPORTED)" >> /usr/lib/llvm17/lib/cmake/llvm/LLVMTestPatch.cmake && \
+    echo "  set_target_properties(LLVMfrontenddriver PROPERTIES IMPORTED_LOCATION \"/usr/lib/llvm17/lib/libLLVMfrontenddriver.a\")" >> /usr/lib/llvm17/lib/cmake/llvm/LLVMTestPatch.cmake && \
     echo "endif()" >> /usr/lib/llvm17/lib/cmake/llvm/LLVMTestPatch.cmake && \
     # Patch the original LLVMExports.cmake to include our patch
     if [ -f "/usr/lib/llvm17/lib/cmake/llvm/LLVMExports.cmake" ]; then \
